[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/Setups/NetworkSetupCustom3.gd" type="Script" id=1]
[ext_resource path="res://scenes/MainMenu/HeaderSection.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/SetupSections/EndGameSetupSection.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/SetupSections/DelaysSection.gd" type="Script" id=5]
[ext_resource path="res://scenes/Widgets/PlusMinusWidget.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Setups/IndoorOutdoorSection.gd" type="Script" id=7]
[ext_resource path="res://scenes/Widgets/LeftRightWidget.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Setups/BackToMenu.gd" type="Script" id=9]
[ext_resource path="res://scenes/Widgets/NonBlockingPopup.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]

size = 38
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 26
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 28
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=7]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=8]

size = 24
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="NetworkSetupCustom3" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Script" ]

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 540.0
margin_bottom = 960.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="HeaderSection" parent="." instance=ExtResource( 2 )]

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 102.0
margin_right = 530.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )

[node name="Label" type="Label" parent="ColorRect3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 520.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Custom Match Settings"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Label2" type="Label" parent="ColorRect3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 49.0
margin_right = 518.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Your Settings will be applied to the
other players."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="EndGameSetupSection" parent="." instance=ExtResource( 4 )]
margin_top = 318.0
margin_bottom = 386.0

[node name="DelaysSection" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 403.0
margin_right = 530.0
margin_bottom = 473.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )
script = ExtResource( 5 )
_sections_unfolded = [ "Script" ]

[node name="RespawnDelay" parent="DelaysSection" instance=ExtResource( 6 )]
margin_left = 30.0
margin_top = 26.0
margin_right = 160.0
margin_bottom = 66.0

[node name="StartGameDelay" parent="DelaysSection" instance=ExtResource( 6 )]
margin_left = 350.0
margin_top = 26.0
margin_right = 480.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="DelaysSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = -1.0
margin_right = 198.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Respawn Delay"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Label2" type="Label" parent="DelaysSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = -1.0
margin_right = 518.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Start Game Delay"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="Label3" type="Label" parent="DelaysSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 183.0
margin_top = 32.0
margin_right = 325.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "in Seconds"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="IndoorOutdoorSection" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 233.0
margin_right = 530.0
margin_bottom = 303.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.576471, 0.513726, 0.231373, 1 )
script = ExtResource( 7 )
_sections_unfolded = [ "Script" ]

[node name="IndoorOutdoorWidget" parent="IndoorOutdoorSection" instance=ExtResource( 8 )]
margin_left = 92.0
margin_top = 30.0
margin_right = 408.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="IndoorOutdoorSection"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -4.0
margin_right = 520.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Indoor or Outdoor Mode?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts", "custom_fonts/font" ]

[node name="BackToMenu" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 900.0
margin_right = 216.0
margin_bottom = 956.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "< Back To Menu"
flat = false
align = 1
script = ExtResource( 9 )
_sections_unfolded = [ "Script", "custom_fonts", "custom_fonts/font" ]

[node name="ContinueSetup" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 304.0
margin_top = 896.0
margin_right = 537.0
margin_bottom = 956.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continue Setup >"
flat = false
align = 1
_sections_unfolded = [ "Script", "custom_fonts", "custom_fonts/font" ]

[node name="HostSetupPopup" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="PMWidChanged" from="DelaysSection/RespawnDelay" to="DelaysSection" method="_on_RespawnDelay_PMWidChanged" flags=3]
[connection signal="PMWidChanged" from="DelaysSection/StartGameDelay" to="DelaysSection" method="_on_StartGameDelay_PMWidChanged" flags=3]
[connection signal="LRWidChanged" from="IndoorOutdoorSection/IndoorOutdoorWidget" to="IndoorOutdoorSection" method="_on_IndoorOutdoorWidget_LRWidChanged" flags=3]
[connection signal="pressed" from="BackToMenu" to="BackToMenu" method="_on_BackToMenu_pressed" flags=7]
[connection signal="pressed" from="ContinueSetup" to="." method="_on_ContinueSetup_pressed" flags=3]
